syntax = "proto3";

package category;

option go_package = "categoryservice/proto/categorypb";

service CategoryService {
  rpc GetCategory(GetCategoryRequest) returns (CategoryResponse);
}

message GetCategoryRequest {
  string id = 1;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
}